--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
-<body style="background-color: #dfdddc;">
+<body style="background-color: rgb(38, 37, 37);">
 
-    <nav class="navbar navbar-expand-lg navbar-dark py-1 position-sticky w-100 top-0"
-        style="z-index: 1000; background-color: rgba(23, 23, 23, 0.95);">
-        <div class="container-fluid px-3 px-md-5">
+    <nav class="navbar navbar-expand-lg navbar-dark py-1 position-absolute w-100 top-0 z-1">
+        <div class="container-fluid px-3">
             <!-- Logo/Brand -->
-            <a class="navbar-brand d-flex align-items-center ps-1 ps-md-5" href="#Home-Section">
+            <a class="navbar-brand d-flex align-items-center ps-2" href="#Home">
                 <img src="assets/images/logo/logo_onepiece.png" class="hero-text img-fluid" alt="ONE PIECE"
-                    style="width: 150px; height: auto;">
+                    style="width: 170px; height: auto;">
             </a>
 
             <button class="navbar-toggler ms-auto border-0 p-1" type="button" data-bs-toggle="collapse"
@@ -34,25 +34,168 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto justify-content-around">
                     <li class="nav-item">
-                        <a class="nav-link fs-5 text-white px-4 py-2" href="#Home-Section">Characters</a>
+                        <a class="nav-link fs-5 fw-bold text-white px-4 py-2" href="#Members">Characters</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-5 text-white px-4 py-2" href="#About-Section">Devil Fruits</a>
+                        <a class="nav-link fs-5 fw-bold text-white px-4 py-2" href="#Devil-fruits">Devil Fruits</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fs-5 text-white px-4 py-2" href="#Attractions-Section">Ships</a>
+                        <a class="nav-link fs-5 fw-bold text-white px-4 py-2" href="#Ships">Ships</a>
+                    </li>
 
                 </ul>
             </div>
         </div>
     </nav>
 
+    <section id="Home">
+        <div class="container-fluid p-0">
+            <div class="row g-0">
+                <div class="col-12">
+                    <img src="assets/images/hero/hero-picture.jpg"
+                        class="w-100 vh-100 object-fit-cover d-block opacity-50" alt="Hero">
+                </div>
+
+                <div class="position-absolute top-50 start-50 translate-middle  text-white px-3 px-md-5">
+                    <h1 data-aos="fade-up" class="display-1 fw-bold mb-3" style="font-family: 'Poppins', sans-serif;">
+                        STRAW HAT <br> PIRATES
+                    </h1>
+                    <a href="#Members" class="btn btn-danger btn-lg">Explore Now</a>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="Members">
+        <div class="container ">
+            <div class="row">
+                <div class="col">
+                    <h2 class="fw-bold text-white display-3 header text-center my-3 header" data-aos="fade-down">
+                        Straw Hat Members
+                    </h2>
+                </div>
+            </div>
 
 
+            <div class="row justify-content-center align-items-center p-3" id="memberRow">
+
+            </div>
+        </div>
+    </section>
+
+    <section id="Devil-fruits">
+        <div class="container">
+
+            <h2 class="fw-bold text-white display-3 header text-center my-3 header" data-aos="fade-down">
+                Straw Hat's Devil Fruits
+            </h2>
+
+            <div class="row justify-content-center align-items-center" id="devilFruitsRow">
+            </div>
+        </div>
+    </section>
+
+    <section id="Ships">
+        <div class="container">
+
+            <h2 class="fw-bold text-white display-3 header text-center my-3 header" data-aos="fade-down">
+                Straw Hat Ships
+            </h2>
+
+            <div class="row justify-content-center align-items-center" id="shipsRow">
+            </div>
+        </div>
+    </section>
+
+    <footer class="text-center py-3 border-top" style="background-color: #0a0a0a;">
+        <p class="text-white mb-0" style="font-size: 0.9rem;">Copyright © Dale Lee. All rights reserved. School purposes
+            only</p>
+    </footer>
+
+    <script src="info.js"></script>
+    <script>
+        var memberRow = document.getElementById("memberRow");
+        var devilFruitsRow = document.getElementById("devilFruitsRow");
+        var shipsRow = document.getElementById("shipsRow");
+
+        // POPULATE MEMBERS
+        for (var i = 0; i < members.length; i++) {
+            memberRow.innerHTML += ` 
+            <div class="col-6 col-md-4 col-lg-3 mb-3" data-aos="fade-up"
+                    <div>
+                        <div data-aos="fade-up" class="img-container d-flex align-items-center justify-content-center">
+                            <img src="${members[i].picture}" class="img-fluid object-fit-contain"
+                                alt="${members[i].name}">
+                        </div>
+                    </div>
+                </div>`
+        };
+
+        // POPULATE DEVIL FRUITS
+        for (var i = 0; i < fruits.length; i++) {
+            devilFruitsRow.innerHTML += `
+        <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">
+            <div class="fruit-flip-card" onclick="flipCard(${i})">
+                <div class="fruit-flip-inner" id="fruit-${i}">
+                    <div class="fruit-flip-front">
+                        <img src="${fruits[i].picture}" class="img-fluid" alt="${fruits[i].name}">
+                        <h5>${fruits[i].name}</h5>
+                    </div>
+                    <div class="fruit-flip-back">
+                        <h5>${fruits[i].name}</h5>
+                        <p><strong>Ability:</strong></p>
+                        <p>${fruits[i].ability}</p>
+                        <p class="mt-3"><strong>Owner:</strong></p>
+                        <p>${fruits[i].owner}</p>
+                    </div>
+                </div>
+            </div>
+        </div>`;
+        }
+
+        // Function to flip card
+        function flipCard(index) {
+            var card = document.getElementById("fruit-" + index).parentElement;
+
+            if (card.classList.contains("flipped")) {
+                card.classList.remove("flipped");
+            } else {
+                card.classList.add("flipped");
+            }
+        }
+
+
+        // POPULATE SHIPS
+        for (var i = 0; i < Ships.length; i++) {
+            shipsRow.innerHTML += ` 
+                <div class="col-6 col-md-4 col-lg-3 mb-3">
+                    <div class="justify-content-center align-items-center d-flex flex-column">
+                        <div class="img-container d-flex align-items-center justify-content-center">
+                            <img src="${Ships[i].picture}" class="img-fluid object-fit-contain"
+                                alt="${Ships[i].name}">
+                        </div>
+                        <h5 class="text-white text-center mt-3">${Ships[i].name}</h5>
+                    </div>
+                </div>`;
+        }
+
+    </script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 800,
+            easing: 'ease-out-quart',
+            offset: 120,
+            once: true,
+            mirror: false
+        });
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
