--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>One Piece Gallery</title>
+    <title>Straw Hat Pirates</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="col">
                     <h2 class="fw-bold text-white display-3 header text-center my-3 header" data-aos="fade-down">
-                        Straw Hat Members
+                        Crew Members
                     </h2>
                 </div>
             </div>
@@ -88,7 +88,7 @@
         <div class="container">
 
             <h2 class="fw-bold text-white display-3 header text-center my-3 header" data-aos="fade-down">
-                Straw Hat's Devil Fruits
+                Devil Fruits
             </h2>
 
             <div class="row justify-content-center align-items-center" id="devilFruitsRow">
@@ -100,7 +100,7 @@
         <div class="container">
 
             <h2 class="fw-bold text-white display-3 header text-center my-3 header" data-aos="fade-down">
-                Straw Hat Ships
+                Ships
             </h2>
 
             <div class="row justify-content-center align-items-center" id="shipsRow">
@@ -167,15 +167,15 @@
 
 
         // POPULATE SHIPS
-        for (var i = 0; i < Ships.length; i++) {
+        for (var i = 0; i < ships.length; i++) {
             shipsRow.innerHTML += ` 
                 <div class="col-6 col-md-4 col-lg-3 mb-3">
                     <div class="justify-content-center align-items-center d-flex flex-column">
                         <div class="img-container d-flex align-items-center justify-content-center">
-                            <img src="${Ships[i].picture}" class="img-fluid object-fit-contain"
-                                alt="${Ships[i].name}">
+                            <img src="${ships[i].picture}" class="img-fluid object-fit-contain"
+                                alt="${ships[i].name}">
                         </div>
-                        <h5 class="text-white text-center mt-3">${Ships[i].name}</h5>
+                        <h5 class="text-white text-center mt-3">${ships[i].name}</h5>
                     </div>
                 </div>`;
         }
