--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container ">
             <div class="row">
                 <div class="col">
-                    <h2 class="fw-bold text-white display-3 header text-center my-3 header" data-aos="fade-down">
+                    <h2 class="fw-bold text-white display-3 header text-center my-3 header">
                         Crew Members
                     </h2>
                 </div>
@@ -87,7 +87,7 @@
     <section id="Devil-fruits">
         <div class="container">
 
-            <h2 class="fw-bold text-white display-3 header text-center my-3 header" data-aos="fade-down">
+            <h2 class="fw-bold text-white display-3 header text-center my-3 header">
                 Devil Fruits
             </h2>
 
@@ -99,7 +99,7 @@
     <section id="Ships">
         <div class="container">
 
-            <h2 class="fw-bold text-white display-3 header text-center my-3 header" data-aos="fade-down">
+            <h2 class="fw-bold text-white display-3 header text-center my-3 header">
                 Ships
             </h2>
 
@@ -122,7 +122,7 @@
         // POPULATE MEMBERS
         for (var i = 0; i < members.length; i++) {
             memberRow.innerHTML += ` 
-            <div class="col-6 col-md-4 col-lg-3 mb-3" data-aos="fade-up"
+            <div class="col-6 col-md-4 col-lg-3 mb-3" data-aos-delay="${i * 100}" data-aos="fade-up">
                     <div>
                         <div data-aos="fade-up" class="img-container d-flex align-items-center justify-content-center">
                             <img src="${members[i].picture}" class="img-fluid object-fit-contain"
@@ -135,7 +135,7 @@
         // POPULATE DEVIL FRUITS
         for (var i = 0; i < fruits.length; i++) {
             devilFruitsRow.innerHTML += `
-        <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos="fade-up">
+        <div class="col-6 col-md-4 col-lg-3 mb-4" data-aos-delay="${i * 100}" data-aos="fade-up">
             <div class="fruit-flip-card" onclick="flipCard(${i})">
                 <div class="fruit-flip-inner" id="fruit-${i}">
                     <div class="fruit-flip-front">
@@ -169,7 +169,7 @@
         // POPULATE SHIPS
         for (var i = 0; i < ships.length; i++) {
             shipsRow.innerHTML += ` 
-                <div class="col-6 col-md-4 col-lg-3 mb-3">
+                <div class="col-6 col-md-4 col-lg-3 mb-3" data-aos-delay="${i * 100}" data-aos="fade-up">
                     <div class="justify-content-center align-items-center d-flex flex-column">
                         <div class="img-container d-flex align-items-center justify-content-center">
                             <img src="${ships[i].picture}" class="img-fluid object-fit-contain"
@@ -185,7 +185,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init({
-            duration: 800,
+            duration: 1000,
             easing: 'ease-out-quart',
             offset: 120,
             once: true,
